--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -35,6 +35,9 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+        managedNamespaceMetadata:
+          labels:
+            goldilocks.fairwinds.com/enabled: 'true'
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "productivity" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
