--- a/cluster/templates/ai.yaml
+++ b/cluster/templates/ai.yaml
@@ -33,6 +33,9 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+        managedNamespaceMetadata:
+          labels:
+            goldilocks.fairwinds.com/enabled: 'true'
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "ai" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
