--- a/charts/infrastructure/goldilocks/templates/rbac-dashboard.yaml
+++ b/charts/infrastructure/goldilocks/templates/rbac-dashboard.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-dashboard
 rules:
   - apiGroups:
       - 'autoscaling.k8s.io'
@@ -37,12 +37,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-dashboard
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: {{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-dashboard
   namespace: {{ .Release.Namespace }}
