fix: Update StatefulSet names for controller and dashboard to include suffix
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/goldilocks/templates/controller-statefulset.yaml
+++ b/charts/infrastructure/goldilocks/templates/controller-statefulset.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-controller
   labels:
     kasten/backup: "true"
   annotations:
