--- a/charts/infrastructure/goldilocks/templates/statefulset-dashboard.yaml
+++ b/charts/infrastructure/goldilocks/templates/statefulset-dashboard.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-dashboard
   labels:
     kasten/backup: "true"
   annotations:
