fix: Update users in SecurityContextConstraints to specify controller and dashboard service accounts
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/goldilocks/templates/securitycontextconstraints.yaml
+++ b/charts/infrastructure/goldilocks/templates/securitycontextconstraints.yaml
@@ -13,5 +13,6 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-  - system:serviceaccount:{{ .Release.Namespace }}:{{ .Release.Name }}
+  - system:serviceaccount:{{ .Release.Namespace }}:{{ .Release.Name }}-controller
+  - system:serviceaccount:{{ .Release.Namespace }}:{{ .Release.Name }}-dashboard
 {{- end }}
