--- a/charts/infrastructure/goldilocks/templates/rbac-controller.yaml
+++ b/charts/infrastructure/goldilocks/templates/rbac-controller.yaml
@@ -56,7 +56,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-controller
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}-controller
