--- a/charts/infrastructure/goldilocks/templates/rbac-dashboard.yaml
+++ b/charts/infrastructure/goldilocks/templates/rbac-dashboard.yaml
@@ -41,7 +41,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-dashboard
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}-dashboard
