fix: Correctly quote enabled label in managedNamespaceMetadata in media.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -43,7 +43,7 @@ spec:
       syncPolicy:
         managedNamespaceMetadata:
           labels:
-            goldilocks.fairwinds.com/enabled: true
+            goldilocks.fairwinds.com/enabled: "true"
         automated:
           prune: true
           selfHeal: true
