fix: Move managedNamespaceMetadata labels to the correct position in ai.yaml and productivity.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/ai.yaml
+++ b/cluster/templates/ai.yaml
@@ -28,14 +28,14 @@ spec:
         server: {{ .Values.spec.destination.server }}
         namespace: '{{ "{{" }} .name {{ "}}" }}'
       syncPolicy:
+        managedNamespaceMetadata:
+          labels:
+            goldilocks.fairwinds.com/enabled: "true"
         automated:
           prune: true
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
-        managedNamespaceMetadata:
-          labels:
-            goldilocks.fairwinds.com/enabled: 'true'
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "ai" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
