fix: Update syncPolicy jsonPointers to include 'automated' in ai.yaml, base.yaml, media.yaml, and productivity.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -35,7 +35,7 @@ spec:
       - kind: Application
         group: argoproj.io
         jsonPointers:
-        - /spec/syncPolicy
+        - /spec/syncPolicy/automated
       project: default
       destination:
         server: {{ .Values.spec.destination.server }}
