--- a/cluster/templates/ai.yaml
+++ b/cluster/templates/ai.yaml
@@ -22,7 +22,7 @@ spec:
       - kind: Application
         group: argoproj.io
         jsonPointers:
-        - /spec/syncPolicy
+        - /spec/syncPolicy/automated
       project: default
       destination:
         server: {{ .Values.spec.destination.server }}
