--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -24,7 +24,7 @@ spec:
       - kind: Application
         group: argoproj.io
         jsonPointers:
-        - /spec/syncPolicy
+        - /spec/syncPolicy/automated
       project: default
       destination:
         server: {{ .Values.spec.destination.server }}
