--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -30,6 +30,9 @@ spec:
         server: {{ .Values.spec.destination.server }}
         namespace: '{{ "{{" }} .name {{ "}}" }}'
       syncPolicy:
+        managedNamespaceMetadata:
+          labels:
+            goldilocks.fairwinds.com/enabled: "true"
         automated:
           prune: true
           selfHeal: true
