feat: Add initial Helm chart for Gatus with necessary templates and configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -12,6 +12,8 @@ spec:
         elements:
         - name: goldilocks
           group: infrastructure
+        - name: gatus
+          group: infrastructure
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
