--- a/charts/infrastructure/gatus/templates/statefulset.yaml
+++ b/charts/infrastructure/gatus/templates/statefulset.yaml
@@ -39,7 +39,7 @@ spec:
         - 100
         - 65535
       initContainers:
-        - name: init-config:
+        - name: init-config
           image: {{ .Values.pods.init.image.repository }}:{{ .Values.pods.init.image.tag }}
           env:
             FOLDER: /config
