--- a/charts/infrastructure/gatus/templates/statefulset.yaml
+++ b/charts/infrastructure/gatus/templates/statefulset.yaml
@@ -42,12 +42,18 @@ spec:
         - name: init-config
           image: {{ .Values.pods.init.image.repository }}:{{ .Values.pods.init.image.tag }}
           env:
-            FOLDER: /config
-            LABEL: gatus.io/enabled
-            NAMESPACE: ALL
-            RESOURCE: both
-            UNIQUE_FILENAMES: true
-            METHOD: WATCH
+            - name: FOLDER
+              value: "/config"
+            - name: LABEL
+              value: "gatus.io/enabled"
+            - name: NAMESPACE
+              value: "ALL"
+            - name: RESOURCE
+              value: "both"
+            - name: UNIQUE_FILENAMES
+              value: "true"
+            - name: METHOD
+              value: "WATCH"
           restartPolicy: Always
           resources:
             requests:
