--- a/charts/infrastructure/gatus/templates/data-volume.yaml
+++ b/charts/infrastructure/gatus/templates/data-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-config
+  name: {{ .Release.Name }}-data
   labels:
     app.kubernetes.io/name: {{ .Release.Name }}
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -11,7 +11,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 15Gi
 {{- if and .Values.cluster.storage .Values.cluster.storage.config .Values.cluster.storage.config.storageClassName }}
   storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
