--- a/charts/productivity/cyberchef/templates/gatus-config.yaml
+++ b/charts/productivity/cyberchef/templates/gatus-config.yaml
@@ -8,7 +8,7 @@ data:
   config.yaml: |-
     endpoints:
       - name: {{ .Values.application.name | quote }}
-        group:  {{ .Values.application.group | default 'other' | quote }}
+        group: {{ .Values.application.group | default "other" | quote }}
         url: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
         interval: 60s
         conditions:
