fix: Update Huntarr application icon to use 'f7:scope'
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/huntarr/values.yaml
+++ b/charts/media/huntarr/values.yaml
@@ -14,7 +14,7 @@ cluster:
 application:
   name: Huntarr
   group: Media
-  icon: reticle
+  icon: f7:scope
   iconColor: ""
   image: ""
   description: "Searches for missing items"
