feat: Add OAuth proxy support with related configurations and service
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/cyberchef/templates/route.yaml
+++ b/charts/productivity/cyberchef/templates/route.yaml
@@ -11,7 +11,11 @@ spec:
   path: /
   to:
     kind: Service
+{{- if .Values.oauthProxy }}
+    name: proxy
+{{- else }}
     name: {{ .Release.Name }}
+{{- end }}
     weight: 100
   port:
     targetPort: http
