--- a/charts/productivity/cyberchef/templates/serviceaccount.yaml
+++ b/charts/productivity/cyberchef/templates/serviceaccount.yaml
@@ -3,3 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}
+{{- if .Values.oauthProxy }}
+    annotations:
+      serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"{{ .Release.Name }}"}}'
+{{- end }}
