--- a/charts/productivity/cyberchef/templates/statefulset.yaml
+++ b/charts/productivity/cyberchef/templates/statefulset.yaml
@@ -39,6 +39,25 @@ spec:
         - 100
         - 65535
       containers:
+{{- if .Values.oauthProxy }}
+        - name: oauth-proxy
+          image: openshift/oauth-proxy:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+          - containerPort: 8443
+            name: public
+          args:
+          - --https-address=:8443
+          - --provider=openshift
+          - --openshift-service-account=proxy
+          - --upstream=http://{{ .Release.Name }}:{{ .Values.application.port }}
+          - --tls-cert=/etc/tls/private/tls.crt
+          - --tls-key=/etc/tls/private/tls.key
+          - --cookie-secret=SECRET
+          volumeMounts:
+          - mountPath: /etc/tls/private
+            name: proxy-tls
+{{- end }}
         - name: main
           env:
           - name: TZ
