fix: Update references to oauthProxy in templates for consistency
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/cyberchef/templates/route.yaml
+++ b/charts/productivity/cyberchef/templates/route.yaml
@@ -11,7 +11,7 @@ spec:
   path: /
   to:
     kind: Service
-{{- if .Values.oauthProxy }}
+{{- if .Values.application.oauthProxy }}
     name: proxy
 {{- else }}
     name: {{ .Release.Name }}
