fix: Update selector labels in proxy service for consistency with naming conventions
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/cyberchef/templates/proxy-service.yaml
+++ b/charts/productivity/cyberchef/templates/proxy-service.yaml
@@ -12,5 +12,7 @@ spec:
     port: 443
     targetPort: 8443
   selector:
-    app: proxy
+    app.kubernetes.io/controller: main
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}
 {{- end }}
