fix: Update TLS termination configuration for oauthProxy in route template
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/cyberchef/templates/route.yaml
+++ b/charts/productivity/cyberchef/templates/route.yaml
@@ -20,7 +20,11 @@ spec:
   port:
     targetPort: http
   tls:
+{{- if .Values.application.oauthProxy }}
+    termination: reencrypt
+{{- else }}
     termination: edge
+{{- end }}
     insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
 {{- else }}
