fix: Update oauthProxy service account argument to use release name
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/cyberchef/templates/statefulset.yaml
+++ b/charts/productivity/cyberchef/templates/statefulset.yaml
@@ -49,7 +49,7 @@ spec:
           args:
           - --https-address=:8443
           - --provider=openshift
-          - --openshift-service-account=proxy
+          - --openshift-service-account={{ .Release.Name }}
           - --upstream=http://{{ .Release.Name }}:{{ .Values.application.port }}
           - --tls-cert=/etc/tls/private/tls.crt
           - --tls-key=/etc/tls/private/tls.key
