feat: Add oauthProxy support with configuration for service, statefulset, and route
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/cyberchef/templates/statefulset.yaml
+++ b/charts/productivity/cyberchef/templates/statefulset.yaml
@@ -49,6 +49,7 @@ spec:
           args:
           - --https-address=:8443
           - --provider=openshift
+          - --cookie-domain=apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
           - --openshift-service-account={{ .Release.Name }}
           - --upstream=http://{{ .Release.Name }}:{{ .Values.application.port }}
           - --tls-cert=/etc/tls/private/tls.crt
