Revert "feat: Add OAuth proxy support with related configurations and service"
This reverts commit 7dbc1bbec18c9ab4f411101d0451ff1d58b18500.

Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -27,6 +27,7 @@ spec:
         - name: sabnzbd
         - name: sonarr
         - name: tautulli
+        - name: huntarr
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
