feat: Add external-secrets Helm chart and integrate with Infisical for secret management
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -10,6 +10,8 @@ spec:
   generators:
     - list:
         elements:
+        - name: external-secrets
+          group: security
         - name: goldilocks
           group: infrastructure
         - name: gatus
