fix: Update hostAPI URL in ClusterSecretStore configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/clustersecretstore.yaml
+++ b/charts/security/external-secrets/templates/clustersecretstore.yaml
@@ -24,4 +24,4 @@ spec:
         secretsPath: /
         recursive: true
       # optional
-      hostAPI: https://app.infisical.com
+      hostAPI: https://app.infisical.com/api
