--- a/charts/security/external-secrets/templates/clustersecretstore.yaml
+++ b/charts/security/external-secrets/templates/clustersecretstore.yaml
@@ -4,6 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: infisical
+  namespace: openshift-operators
 spec:
   provider:
     infisical:
