fix: Restore OperatorConfig template with complete configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -3,6 +3,8 @@ kind: OperatorConfig
 metadata:
   name: external-secrets
   namespace: openshift-operators
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 spec:
   certController:
     create: true
