--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -2,59 +2,117 @@ apiVersion: operator.external-secrets.io/v1alpha1
 kind: OperatorConfig
 metadata:
   name: external-secrets
-  namespace: openshift-operators
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
 spec:
+  affinity: {}
   certController:
     create: true
     image:
       pullPolicy: IfNotPresent
       repository: ghcr.io/external-secrets/external-secrets
+      tag: ''
+    imagePullSecrets: []
+    nameOverride: ''
+    nodeSelector: {}
+    podAnnotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+    podLabels: {}
+    podSecurityContext: {}
+    priorityClassName: ''
     prometheus:
-      enabled: true
+      enabled: false
       service:
         port: 8080
     rbac:
       create: true
     requeueInterval: 5m
+    resources: {}
+    securityContext: {}
     serviceAccount:
+      annotations:
+        argocd.argoproj.io/compare-options: IgnoreExtraneous
       create: true
+      name: ''
+    tolerations: []
   concurrent: 1
+  controllerClass: ''
   crds:
     createClusterExternalSecret: true
     createClusterSecretStore: true
   createOperator: true
+  deploymentAnnotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
+  extraArgs: {}
+  extraEnv: []
+  fullnameOverride: ''
   image:
     pullPolicy: IfNotPresent
     repository: ghcr.io/external-secrets/external-secrets
+    tag: ''
+  imagePullSecrets: []
   installCRDs: false
   leaderElect: false
+  nameOverride: ''
+  nodeSelector: {}
+  podAnnotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
+  podLabels: {}
+  podSecurityContext: {}
+  priorityClassName: ''
   processClusterExternalSecret: true
   processClusterStore: true
   prometheus:
-    enabled: true
+    enabled: false
     service:
       port: 8080
   rbac:
     create: true
   replicaCount: 1
+  resources: {}
+  scopedNamespace: ''
   scopedRBAC: false
+  securityContext: {}
   serviceAccount:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
     create: true
+    name: ''
+  tolerations: []
   webhook:
+    affinity: {}
     certCheckInterval: 5m
     certDir: /tmp/certs
     create: true
+    deploymentAnnotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+    extraArgs: {}
+    extraEnv: []
+    fullnameOverride: ''
     image:
       pullPolicy: IfNotPresent
       repository: ghcr.io/external-secrets/external-secrets
+      tag: ''
+    imagePullSecrets: []
+    nameOverride: ''
+    nodeSelector: {}
+    podAnnotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+    podLabels: {}
+    podSecurityContext: {}
+    priorityClassName: ''
     prometheus:
-      enabled: true
+      enabled: false
       service:
         port: 8080
     rbac:
       create: true
     replicaCount: 1
+    resources: {}
+    securityContext: {}
     serviceAccount:
+      annotations:
+        argocd.argoproj.io/compare-options: IgnoreExtraneous
       create: true
+      name: ''
+    tolerations: []
