fix: Enable scopedRBAC in OperatorConfig for improved security
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -71,7 +71,7 @@ spec:
   replicaCount: 1
   resources: {}
   scopedNamespace: ''
-  scopedRBAC: false
+  scopedRBAC: true
   securityContext: {}
   serviceAccount:
     annotations:
