fix: Update scopedNamespace in OperatorConfig to openshift-operators
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -70,7 +70,7 @@ spec:
     create: true
   replicaCount: 1
   resources: {}
-  scopedNamespace: ''
+  scopedNamespace: 'openshift-operators'
   scopedRBAC: true
   securityContext: {}
   serviceAccount:
