fix: Set rbac.create to false in OperatorConfig for proper role management
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -67,7 +67,7 @@ spec:
     service:
       port: 8080
   rbac:
-    create: true
+    create: false
   replicaCount: 1
   resources: {}
   scopedNamespace: 'openshift-operators'
