fix: Reset scopedNamespace and scopedRBAC in OperatorConfig for consistency
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -70,8 +70,8 @@ spec:
     create: false
   replicaCount: 1
   resources: {}
-  scopedNamespace: 'openshift-operators'
-  scopedRBAC: true
+  scopedNamespace: ''
+  scopedRBAC: false
   securityContext: {}
   serviceAccount:
     annotations:
@@ -83,7 +83,7 @@ spec:
     affinity: {}
     certCheckInterval: 5m
     certDir: /tmp/certs
-    create: true
+    create: false
     deploymentAnnotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
     extraArgs: {}
