fix: Set rbac.create to false in OperatorConfig for proper role management
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/security/external-secrets/templates/operatorconfig.yaml
+++ b/charts/security/external-secrets/templates/operatorconfig.yaml
@@ -25,7 +25,7 @@ spec:
       service:
         port: 8080
     rbac:
-      create: true
+      create: false
     requeueInterval: 5m
     resources: {}
     securityContext: {}
