--- a/charts/media/radarr/templates/statefulset.yaml
+++ b/charts/media/radarr/templates/statefulset.yaml
@@ -49,6 +49,9 @@ spec:
           - name: {{ $key }}
             value: "{{ $value }}"
           {{- end }}
+          envFrom:
+            - secretRef:
+                name: radarr
           image: "{{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}"
           imagePullPolicy: IfNotPresent
           volumeMounts:
