--- a/charts/security/external-secrets/templates/clustersecretstore.yaml
+++ b/charts/security/external-secrets/templates/clustersecretstore.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: infisical
+  name: external-secrets
 spec:
   provider:
     infisical:
