--- a/charts/media/radarr/templates/externalsecret.yaml
+++ b/charts/media/radarr/templates/externalsecret.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1alpha1
+apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: radarr
@@ -15,7 +15,6 @@ spec:
       mergePolicy: Replace
       data:
         RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
-
   dataFrom:
     - find:
         path: RADARR_API_KEY
