--- a/charts/media/radarr/templates/externalsecret.yaml
+++ b/charts/media/radarr/templates/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       engineVersion: v2
       mergePolicy: Replace
       data:
-        RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
+        RADARR__AUTH__APIKEY: "{{ `{{ .RADARR_API_KEY }}` }}"
   dataFrom:
     - find:
         path: RADARR_API_KEY
