feat: Introduce external-secrets-operator Helm chart with Infisical integration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -10,7 +10,7 @@ spec:
   generators:
     - list:
         elements:
-        - name: external-secrets
+        - name: external-secrets-operator
           group: security
         - name: goldilocks
           group: infrastructure
