--- a/charts/security/external-secrets-operator/Chart.yaml
+++ b/charts/security/external-secrets-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 description: A Helm chart for configuring external secret stores
-name: external-secrets
+name: external-secrets-operator
 version: 1.0.0
 kubeVersion: ">=1.31.0-0"
 
