feat: Update ExternalSecret templates for dynamic release name and add Sonarr integration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/radarr/templates/statefulset.yaml
+++ b/charts/media/radarr/templates/statefulset.yaml
@@ -51,7 +51,7 @@ spec:
           {{- end }}
           envFrom:
             - secretRef:
-                name: radarr
+                name: {{ .Release.Name }}
           image: "{{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}"
           imagePullPolicy: IfNotPresent
           volumeMounts:
