--- a/charts/media/sonarr/templates/externalsecret.yaml
+++ b/charts/media/sonarr/templates/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       engineVersion: v2
       mergePolicy: Replace
       data:
-        RADARR__AUTH__APIKEY: "{{ `{{ .RADARR_API_KEY }}` }}"
+        SONARR__AUTH__APIKEY: "{{ `{{ .SONARR_API_KEY }}` }}"
   dataFrom:
     - find:
-        path: RADARR_API_KEY
+        path: SONARR_API_KEY
