feat: Add ExternalSecret templates for various services and include environment variable references
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/bazarr/templates/statefulset.yaml
+++ b/charts/media/bazarr/templates/statefulset.yaml
@@ -45,6 +45,9 @@ spec:
           {{ range $key, $value := .Values.pods.main.env }}- name: {{ $key }}
             value: {{ $value }}
           {{ end }}
+          envFrom:
+            - secretRef:
+                name: {{ .Release.Name }}
           image: {{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}
           imagePullPolicy: IfNotPresent
           name: main
