--- a/charts/media/prowlarr/templates/statefulset.yaml
+++ b/charts/media/prowlarr/templates/statefulset.yaml
@@ -47,6 +47,9 @@ spec:
           - name: {{ $key }}
             value: "{{ $value }}"
           {{- end }}
+          envFrom:
+            - secretRef:
+                name: {{ .Release.Name }}
           image: {{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}
           imagePullPolicy: IfNotPresent
           volumeMounts:
