feat: Add pod affinity configuration to imagemaid CronJob for better scheduling
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/plex/templates/cronjob-imagemaid.yaml
+++ b/charts/media/plex/templates/cronjob-imagemaid.yaml
@@ -23,6 +23,14 @@ spec:
         spec:
           restartPolicy: OnFailure
           serviceAccountName: {{ .Release.Name }}
+          affinity:
+            podAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+              - labelSelector:
+                  matchLabels:
+                    app.kubernetes.io/name: {{ .Release.Name }}
+                    app.kubernetes.io/controller: main
+                topologyKey: kubernetes.io/hostname
           securityContext:
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
