feat: Change access mode to ReadWriteMany for cache and config volume claims
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/plex/templates/cache-volume.yaml
+++ b/charts/media/plex/templates/cache-volume.yaml
@@ -9,7 +9,7 @@ metadata:
     kasten/skip: "true"
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 15Gi
