Revert "feat: Add imagemaid CronJob with configuration for Plex Media Server management"
This reverts commit 6df832fa3540e665198e765da13cb62b92af6cf4.

Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/plex/templates/cache-volume.yaml
+++ b/charts/media/plex/templates/cache-volume.yaml
@@ -9,8 +9,7 @@ metadata:
     kasten/skip: "true"
 spec:
   accessModes:
-    - ReadWriteMany
-  volumeMode: Block
+    - ReadWriteOnce
   resources:
     requests:
       storage: 15Gi
