fix: Update MODE environment variable from 'report' to 'remove'
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/plex/templates/statefulset.yaml
+++ b/charts/media/plex/templates/statefulset.yaml
@@ -81,7 +81,7 @@ spec:
           - name: PLEX_PATH
             value: /config/Library/Application Support/Plex Media Server
           - name: MODE
-            value: report
+            value: remove
           - name: PHOTO_TRANSCODER
             value: 'true'
           #- name: SCHEDULE
