--- a/charts/media/plex/templates/statefulset.yaml
+++ b/charts/media/plex/templates/statefulset.yaml
@@ -84,8 +84,8 @@ spec:
             value: remove
           - name: PHOTO_TRANSCODER
             value: 'true'
-          #- name: SCHEDULE
-          #  value: '06:30'
+          - name: SCHEDULE
+            value: '06:30'
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}
