fix: Update SCHEDULE environment variable to include daily frequency
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/plex/templates/statefulset.yaml
+++ b/charts/media/plex/templates/statefulset.yaml
@@ -85,7 +85,7 @@ spec:
           - name: PHOTO_TRANSCODER
             value: 'true'
           - name: SCHEDULE
-            value: '06:30'
+            value: '06:30|daily'
           envFrom:
             - secretRef:
                 name: {{ .Release.Name }}
