feat: Add Posterizarr Helm chart and related configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -21,6 +21,7 @@ spec:
         - name: overseerr
         - name: pinchflat
         - name: plex
+        - name: posterizarr
         - name: prowlarr
         - name: radarr
         - name: readarr
